[project]
name = "project1-rag-multiagent"
version = "0.2.0"
description = "Local RAG multi-agent system — Ollama + HuggingFace + FAISS + Streamlit"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "pypdf>=4.0.0",
    "requests>=2.32.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "torchvision>=0.27.1",
]
